@@ -42,6 +42,7 @@ lib/Psh/Builtins/Bg.pm
 lib/Psh/Builtins/Builtin.pm
 lib/Psh/Builtins/Exit.pm
 lib/Psh/Builtins/Fg.pm
+lib/Psh/Builtins/Dirs.pm
 lib/Psh/Builtins/Help.pm
 lib/Psh/Builtins/History.pm
 lib/Psh/Builtins/Jobs.pm
